--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -40,4 +40,4 @@ jobs:
         run:  wget --no-check-certificate 'https://docs.google.com/uc?export=download&id=18I0xvtHjkKduxz05PUPfROIgf5ZLAGvr' -O srcbuggy.jar
 
       - name: List Files
-        run: ls && pwd
+        run: cd /home/runner/work/jni-bo-ci/jni-bo-ci && ls && pwd
