--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -39,7 +39,10 @@ jobs:
           # https://maven.pkg.github.com/NobleMathews/srcBuggy/1.0.2/srcbuggy-1.0.2.jar
         run:  wget --no-check-certificate 'https://docs.google.com/uc?export=download&id=18I0xvtHjkKduxz05PUPfROIgf5ZLAGvr' -O srcbuggy.jar
 
+      - name: "Install srcml"
+        run: wget http://131.123.42.38/lmcrs/v1.0.0/srcml_1.0.0-1_ubuntu20.04.deb && sudo dpkg -i srcml_1.0.0-1_ubuntu20.04.deb
+
       - name: Run srcBuggy
-        run: sudo java -jar srcbuggy.jar $repo
+        run: dpkg -L library.deb
         env:
           repo: ${{ github.workspace }}
