--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -43,6 +43,6 @@ jobs:
         run: wget http://131.123.42.38/lmcrs/v1.0.0/srcml_1.0.0-1_ubuntu20.04.deb && sudo dpkg -i srcml_1.0.0-1_ubuntu20.04.deb
 
       - name: Run srcBuggy
-        run: dpkg -L library.deb
+        run: dpkg -L srcml_1.0.0-1_ubuntu20.04.deb
         env:
           repo: ${{ github.workspace }}
