--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -16,7 +16,7 @@ jobs:
   # "build" workflow
   build:
 
-    name: Process Java and C++ code
+    name: Buffer Overflow Check ( Java x C++ )
     #The type of runner on which job will run
     runs-on: ubuntu-latest
 
@@ -44,6 +44,5 @@ jobs:
 
       - name: Run srcBuggy
         run: sudo java -jar srcbuggy.jar $repo /usr/bin/srcml
-
         env:
           repo: ${{ github.workspace }}
